--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
     <!--navbar-->
-    <nav class="navbar fixed-top navbar-expand-lg color-principal" data-aos="fade-down">
+    <nav class="navbar  navbar-dark  fixed-top navbar-expand-lg color-principal" data-aos="fade-down">
         <div class="container color-principal">
             <a class="navbar-brand fuente-brand text-light " href="#">Physio Animal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse " id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">INICIO</a>
+                        <a class="nav-link text-light" href="#home">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">QUIENES SOMOS</a>
+                        <a class="nav-link text-light" href="#services">QUIENES SOMOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">SERVICIOS</a>
+                        <a class="nav-link text-light" href="#about">SERVICIOS</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">CONTACTO</a>
+                        <a class="nav-link text-light" href="#contact">CONTACTO</a>
                     </li>
                 </ul>
             </div>
@@ -123,7 +123,7 @@
     </section>
 
     <!--about-->
-    <section id="about" class="bg-cover" style="background-image: url(img/cover_4.webp)">
+    <section id="about" class="bg-cover" style="background-image: url(img/dog-foto2.jpg)">
 
         <div class="overlay"></div>
         <div class="container text-white text-center">
@@ -234,7 +234,7 @@
 
     <!--counters-->
 
-    <section class="bg-cover height-section" style="background-image: url(img/img7Section.jpg)">
+    <section class="bg-cover height-section" style="background-image: url(img/dogFoto3.jpg)">
         <div class="overlay"></div>
         <div class="container ">
             <div class="row gy-4 mt-5 mb-5" data-aos="fade-up">
@@ -277,7 +277,7 @@
     </section>
 
     <!--contact-->
-    <section id="contact" class="bg-cover text-white" style="background-image: url(img/concreto-wmin.jpg)">
+    <section id="contact" class="bg-cover text-white" style="background-image: url(img/dogFoto.jpg)">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
