--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <!--FUNETE DEL LOGO TITULO DE LA EMPRESA-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Work+Sans&display=swap" rel="stylesheet">
+    <!--CSS-->
     <link rel="stylesheet" href="css/line-icons.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/trabajos-previos.css">
+    <link rel="stylesheet" href="css/banner/banner.css">
     <title>Physio Animal</title>
 </head>
 
@@ -51,16 +53,18 @@
     </nav>
 
     <!--hero-->
-    <section id="home" class="bg-cover hero-section" style="background-image: url(img/dogFoto1.jpg)">
+    <section id="home" class="bg-cover hero-section" style="background-image: url(img/PA_006.jpg)">
 
         <div class="overlay"></div>
         <div class="container text-white text-center">
             <div class="row">
                 <div class="col-12">
+                    <img src="img/BLANCO.png" class="logo-banner" data-aos="fade-up" alt="">
+                    <!--hero
                     <h1 class=" fuente-brand  display-4" data-aos="zoom-i ">PHYSIO ANIMAL<br /></h1>
                     <p class="my-4" data-aos="fade-up">
                         TERAPIA PARA LOMITOS
-                    </p>
+                    </p>-->
                 </div>
             </div>
         </div>
@@ -234,7 +238,7 @@
 
     <!--counters-->
 
-    <section class="bg-cover height-section" style="background-image: url(img/dogFoto3.jpg)">
+    <section class="bg-cover height-section" style="background-image: url(img/PA_002.jpg)">
         <div class="overlay"></div>
         <div class="container ">
             <div class="row gy-4 mt-5 mb-5" data-aos="fade-up">
@@ -257,19 +261,23 @@
                 <div class="col-md-4" data-aos="fade-up">
                     <img class="img-trabajos-previos" src="img/eolico.png" alt="" />
                     <div class="mt-4">
-                        <h5 class="m-4 fs-6 text-uppercase"><a href="#">Supervision ambiental de la construccion del parque eolico de TIZIMIN. </a></h5>
+                        <h5 class="m-4 fs-6 text-uppercase"><a href="#">Supervision ambiental de la construccion del
+                                parque eolico de TIZIMIN. </a></h5>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up">
                     <img class="img-trabajos-previos" src="img/americas-min.png" alt="" />
                     <div class="mt-4">
-                        <h5 class="mt-1 mb-2 text-uppercase fs-6"><a href="#"> Supervision ambiental del fraccionamientos SADASI (LAS AMERICAS VI, TIXCACAL Y LOS HEROES)</a></h5>
+                        <h5 class="mt-1 mb-2 text-uppercase fs-6"><a href="#"> Supervision ambiental del
+                                fraccionamientos SADASI (LAS AMERICAS VI, TIXCACAL Y LOS HEROES)</a></h5>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up">
                     <img class="img-trabajos-previos" src="img/progreso.png" alt="" />
                     <div class="mt-4">
-                        <h5 class="m-2 fs-6"><a href="#">MANIFESTACIÓN DE IMPACTO AMBIENTAL MODALIDAD PARTICULAR PARA LA CONSTRUCCIÓN DE UNA PLATAFORMA EN EL RECINTO PORTUARIO DE PUERTO PROGRESO, YUCATÁN.</a></h5>
+                        <h5 class="m-2 fs-6"><a href="#">MANIFESTACIÓN DE IMPACTO AMBIENTAL MODALIDAD PARTICULAR PARA LA
+                                CONSTRUCCIÓN DE UNA PLATAFORMA EN EL RECINTO PORTUARIO DE PUERTO PROGRESO, YUCATÁN.</a>
+                        </h5>
                     </div>
                 </div>
             </div>
@@ -277,7 +285,7 @@
     </section>
 
     <!--contact-->
-    <section id="contact" class="bg-cover text-white" style="background-image: url(img/dogFoto.jpg)">
+    <section id="contact" class="bg-cover text-white" style="background-image: url(img/PA_003.jpg)">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
