--- a/index.html
+++ b/index.html
@@ -78,19 +78,7 @@
                     <h2 class="text-center mb-5">QUIENES SOMOS</h2>
 
                     <p class="text-start p-2">
-                        INGESA ofrece asesoría, consultoría y gestión para el desarrollo de
-                        proyectos que requieren evaluación en Materia de Impacto Ambiental
-                        ante la Secretaria de Desarrollo Sustentable (SDS) y la Secretaria
-                        de Medio Ambiente y Recursos Naturales (SEMARNAT), para proyectos
-                        de Construcción y Desarrollo Ambiental; y para proyectos que
-                        requieren de evaluación ante la Comisión Nacional del Agua (CNA),
-                        Secretaria de Energía (SENER) Comisión Reguladora de Energía (CRE)
-                        y Agencia de Seguridad, Energía y Ambiente (ASEA) a fin de cumplir
-                        con los requisitos legales que conduzcan a un manejo integral del
-                        sistema ambiental del proyecto, logrando un balance en el
-                        desarrollo económico, el uso racional de los recursos naturales,
-                        seguridad ambiental y la protección y conservación del medio
-                        ambiente.<br />
+                        PHYSIO ANIMAL Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae consequatur eveniet dicta obcaecati dolor delectus voluptas iste, reiciendis ut molestiae? Magni voluptates temporibus eum ducimus non adipisci, dolores ab animi! Dolores praesentium cum non molestiae ducimus nihil placeat corrupti, quos aspernatur at ipsam facilis totam ill<br />
                     </p>
                 </div>
             </div>
@@ -102,8 +90,7 @@
                         </div>
                         <h4 class="mt-5 pt-4 mb-5">Misión</h4>
                         <p class="text-start p-2">
-                            Ofrecer SOLUCIONES AMBIENTALES a través de una red de
-                            profesionales especializados a nuestros clientes.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique rerum veritatis illum porro architecto magni fugiat voluptatem non doloribus accusantium.
                         </p>
                     </div>
                 </div>
@@ -114,11 +101,7 @@
                         </div>
                         <h4 class="mt-5 pt-4 mb-5">Visión</h4>
                         <p class="text-start p-2 ">
-                            Ser reconocidos como LÍDERES en materia ambiental en la
-                            Península de Yucatán para el desarrollo de proyectos
-                            sustentables. Para ello contamos con profesionales
-                            especializados que garantiza la satisfacción de nuestros
-                            clientes.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos maiores quidem inventore corrupti tenetur praesentium veniam tempore ipsa velit?
                         </p>
                     </div>
                 </div>
@@ -133,14 +116,9 @@
         <div class="container text-white text-center">
             <div class="row">
                 <div class="col-12 section-intro text-center" data-aos="fade-up">
-                    <h2 class="mb-5">SUPERVISIÓN AMBIENTAL</h2>
+                    <h2 class="mb-5 fuente-brand">AL CUIDADO DE TU LOMITO</h2>
 
-                    <p class="text-start text-size-3">
-                        Seguimiento de las actividades en obra para tener el control del
-                        cumplimiento de la legislación y normatividad ambiental vigente,
-                        así como los términos y condicionantes que las autoridades
-                        ambientales determinan en cada proyecto.
-                    </p>
+                 
                 </div>
             </div>
         </div>
@@ -153,8 +131,7 @@
                 <div class="col-12 section-intro text-center" data-aos="fade-up">
 
                     <h2 class="text-uppercase mb-5 ">
-                        estudios para la tramitación de autorizaciones, concesiones,
-                        permisos y licencias.
+                      nuestros servicios    
                     </h2>
                 </div>
             </div>
@@ -242,10 +219,7 @@
         <div class="overlay"></div>
         <div class="container ">
             <div class="row gy-4 mt-5 mb-5" data-aos="fade-up">
-                <div class="col-md-3"></div>
-                <div class="col-md-3"></div>
-                <div class="col-md-3"></div>
-                <div class="col-md-3"></div>
+         
             </div>
         </div>
     </section>
@@ -254,30 +228,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 section-intro text-center" data-aos="fade-up">
-                    <h2>TRABAJOS PREVIOS</h2>
+                    <h2>HISTORIAS BONITAS</h2>
                 </div>
             </div>
             <div class="row text-start">
                 <div class="col-md-4" data-aos="fade-up">
                     <img class="img-trabajos-previos" src="img/eolico.png" alt="" />
                     <div class="mt-4">
-                        <h5 class="m-4 fs-6 text-uppercase"><a href="#">Supervision ambiental de la construccion del
-                                parque eolico de TIZIMIN. </a></h5>
+                        <h5 class="m-4 fs-6 text-uppercase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam recusandae ratione, asperiores maiores repellat soluta.z</h5>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up">
                     <img class="img-trabajos-previos" src="img/americas-min.png" alt="" />
                     <div class="mt-4">
-                        <h5 class="mt-1 mb-2 text-uppercase fs-6"><a href="#"> Supervision ambiental del
-                                fraccionamientos SADASI (LAS AMERICAS VI, TIXCACAL Y LOS HEROES)</a></h5>
+                        <h5 class="mt-1 mb-2 text-uppercase fs-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum dolor quas nulla, doloremque rem iure.</h5>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up">
                     <img class="img-trabajos-previos" src="img/progreso.png" alt="" />
                     <div class="mt-4">
-                        <h5 class="m-2 fs-6"><a href="#">MANIFESTACIÓN DE IMPACTO AMBIENTAL MODALIDAD PARTICULAR PARA LA
-                                CONSTRUCCIÓN DE UNA PLATAFORMA EN EL RECINTO PORTUARIO DE PUERTO PROGRESO, YUCATÁN.</a>
-                        </h5>
+                        <h5 class="m-2 fs-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum ex doloremque quis esse, repellat voluptates.</h5>
                     </div>
                 </div>
             </div>
@@ -325,11 +295,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="mb-0 fuente-brand">INGESA</p>
+                    <p class="mb-0 fuente-brand">Physio Animal</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <div>
-                        <a href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@ingesamid.com</a>
+                        <a href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
                     </div>
                 </div>
             </div>
