cambios en fuente

--- a/index.html
+++ b/index.html
@@ -53,18 +53,16 @@
     </nav>
 
     <!--hero-->
-    <section id="home" class="bg-cover hero-section" style="background-image: url(img/PA_006.jpg)">
+    <section id="home" class="bg-cover hero-section" style="background-image: url(img/PA_009.jpg)">
 
         <div class="overlay"></div>
         <div class="container text-white text-center">
             <div class="row">
                 <div class="col-12">
+                    <h1 class="fuente-brand" data-aos="zoom-i ">Physio Animal</h1>
                     <img src="img/BLANCO.png" class="logo-banner" data-aos="fade-up" alt="">
                     <!--hero
-                    <h1 class=" fuente-brand  display-4" data-aos="zoom-i ">PHYSIO ANIMAL<br /></h1>
-                    <p class="my-4" data-aos="fade-up">
-                        TERAPIA PARA LOMITOS
-                    </p>-->
+                    -->
                 </div>
             </div>
         </div>
@@ -75,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 section-intro " data-aos="fade-up">
-                    <h2 class="text-center mb-5">QUIENES SOMOS</h2>
+                    <h2 class="text-center fuente-brand mb-5">QUIENES SOMOS</h2>
 
                     <p class="text-start p-2">
                         PHYSIO ANIMAL Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae consequatur eveniet dicta obcaecati dolor delectus voluptas iste, reiciendis ut molestiae? Magni voluptates temporibus eum ducimus non adipisci, dolores ab animi! Dolores praesentium cum non molestiae ducimus nihil placeat corrupti, quos aspernatur at ipsam facilis totam ill<br />
@@ -88,7 +86,7 @@
                         <div class="service-img">
                             <img src="img/mision-ultra-min.jpg" alt="" />
                         </div>
-                        <h4 class="mt-5 pt-4 mb-5">Misión</h4>
+                        <h4 class="mt-5 pt-4 mb-5 fuente-brand">Misión</h4>
                         <p class="text-start p-2">
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique rerum veritatis illum porro architecto magni fugiat voluptatem non doloribus accusantium.
                         </p>
@@ -99,7 +97,7 @@
                         <div class="service-img">
                             <img src="img/vision-ultra-min.jpg" alt="" />
                         </div>
-                        <h4 class="mt-5 pt-4 mb-5">Visión</h4>
+                        <h4 class="mt-5 pt-4 mb-5 fuente-brand">Visión</h4>
                         <p class="text-start p-2 ">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos maiores quidem inventore corrupti tenetur praesentium veniam tempore ipsa velit?
                         </p>
@@ -110,7 +108,7 @@
     </section>
 
     <!--about-->
-    <section id="about" class="bg-cover" style="background-image: url(img/dog-foto2.jpg)">
+    <section id="about" class="bg-cover" style="background-image: url(img/dogFoto.jpg)">
 
         <div class="overlay"></div>
         <div class="container text-white text-center">
@@ -130,13 +128,13 @@
             <div class="row">
                 <div class="col-12 section-intro text-center" data-aos="fade-up">
 
-                    <h2 class="text-uppercase mb-5 ">
+                    <h2 class="text-uppercase mb-5 fuente-brand">
                       nuestros servicios    
                     </h2>
                 </div>
             </div>
             <div class="row gx-4 gy-5">
-                <div class="col-md-4 feature" data-aos="fade-up">
+                <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-tree-city"></i>
                     </div>
@@ -147,7 +145,7 @@
                         zona donde se pretende realizar.
                     </p>
                 </div>
-                <div class="col-md-4 feature" data-aos="fade-up">
+                <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-file-lines"></i>
                     </div>
@@ -159,7 +157,7 @@
                         para controlar los efectos adversos al equilibrio ecologico.
                     </p>
                 </div>
-                <div class="col-md-4 feature" data-aos="fade-up">
+                <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-file-powerpoint"></i>
                     </div>
@@ -170,7 +168,7 @@
                         o atenuarlo.
                     </p>
                 </div>
-                <div class="col-md-4 feature" data-aos="fade-up">
+                <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-file-contract"></i>
                     </div>
@@ -182,7 +180,7 @@
                         el artículo 117 de la Ley General de Desarrollo Forestal Sustentable.
                     </p>
                 </div>
-                <div class="col-md-4 feature" data-aos="fade-up">
+                <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-bridge-water"></i>
                     </div>
@@ -194,7 +192,7 @@
                         de eficiencia ambiental, tecnológica, económica y social.
                     </p>
                 </div>
-                <div class="col-md-4 feature" data-aos="fade-up">
+                <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-building-circle-exclamation"></i>
                     </div>
@@ -215,7 +213,7 @@
 
     <!--counters-->
 
-    <section class="bg-cover height-section" style="background-image: url(img/PA_002.jpg)">
+    <section class="bg-cover height-section" style="background-image: url(img/dogFoto3.jpg)">
         <div class="overlay"></div>
         <div class="container ">
             <div class="row gy-4 mt-5 mb-5" data-aos="fade-up">
@@ -255,7 +253,7 @@
     </section>
 
     <!--contact-->
-    <section id="contact" class="bg-cover text-white" style="background-image: url(img/PA_003.jpg)">
+    <section id="contact" class="bg-cover text-white" style="background-image: url(img/dogFoto4.jpg)">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
