fuente margenes textos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Literata:opsz,wght@7..72,300&display=swap" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="css/line-icons.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -76,7 +77,10 @@
                     <h2 class="text-center fuente-brand mb-5">QUIENES SOMOS</h2>
 
                     <p class="text-start p-2">
-                        PHYSIO ANIMAL Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae consequatur eveniet dicta obcaecati dolor delectus voluptas iste, reiciendis ut molestiae? Magni voluptates temporibus eum ducimus non adipisci, dolores ab animi! Dolores praesentium cum non molestiae ducimus nihil placeat corrupti, quos aspernatur at ipsam facilis totam ill<br />
+                        PHYSIO ANIMAL Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae consequatur
+                        eveniet dicta obcaecati dolor delectus voluptas iste, reiciendis ut molestiae? Magni voluptates
+                        temporibus eum ducimus non adipisci, dolores ab animi! Dolores praesentium cum non molestiae
+                        ducimus nihil placeat corrupti, quos aspernatur at ipsam facilis totam ill<br />
                     </p>
                 </div>
             </div>
@@ -84,22 +88,24 @@
                 <div class="col-md-6" data-aos="zoom-in">
                     <div class="service">
                         <div class="service-img">
-                            <img src="img/mision-ultra-min.jpg" alt="" />
+                            <img src="img/cheems.jpg" alt="" />
                         </div>
                         <h4 class="mt-5 pt-4 mb-5 fuente-brand">Misión</h4>
                         <p class="text-start p-2">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique rerum veritatis illum porro architecto magni fugiat voluptatem non doloribus accusantium.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique rerum veritatis illum
+                            porro architecto magni fugiat voluptatem non doloribus accusantium.
                         </p>
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="zoom-in">
                     <div class="service">
                         <div class="service-img">
-                            <img src="img/vision-ultra-min.jpg" alt="" />
+                            <img src="img/cheems.jpg" alt="" />
                         </div>
                         <h4 class="mt-5 pt-4 mb-5 fuente-brand">Visión</h4>
                         <p class="text-start p-2 ">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos maiores quidem inventore corrupti tenetur praesentium veniam tempore ipsa velit?
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos maiores quidem
+                            inventore corrupti tenetur praesentium veniam tempore ipsa velit?
                         </p>
                     </div>
                 </div>
@@ -109,14 +115,11 @@
 
     <!--about-->
     <section id="about" class="bg-cover" style="background-image: url(img/dogFoto.jpg)">
-
         <div class="overlay"></div>
         <div class="container text-white text-center">
             <div class="row">
                 <div class="col-12 section-intro text-center" data-aos="fade-up">
                     <h2 class="mb-5 fuente-brand">AL CUIDADO DE TU LOMITO</h2>
-
-                 
                 </div>
             </div>
         </div>
@@ -129,7 +132,7 @@
                 <div class="col-12 section-intro text-center" data-aos="fade-up">
 
                     <h2 class="text-uppercase mb-5 fuente-brand">
-                      nuestros servicios    
+                        nuestros servicios
                     </h2>
                 </div>
             </div>
@@ -138,75 +141,46 @@
                     <div class="icon">
                         <i class="fa-solid fa-tree-city"></i>
                     </div>
-                    <h5 class="mt-4 mb-3">Factibilidad Urbana Ambiental (FUA)</h5>
+                    <h5 class="mt-4 mb-3">Lorem, ipsum dolor.</h5>
                     <p class="text-start p-2 ">
-                        Estudio que contiene los elementos de una obra o actividades
-                        para determinar si es compatible con el uso del suelo de la
-                        zona donde se pretende realizar.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Aliquid, culpa perspiciatis! Maxime, nihil laboriosam! Vero!
                     </p>
                 </div>
                 <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-file-lines"></i>
                     </div>
-                    <h5 class="mt-4 mb-3">Manifestación de Impacto Ambiental (MIA)</h5>
+                    <h5 class="mt-4 mb-3">Lorem, ipsum dolor.</h5>
                     <p class="text-start p-2">
-                        Estudio que contiene las acciones proyectadas de una obra
-                        o actividad, los riesgos que representan al equilibrio ecologico
-                        o al ambiente y las medidas tecnicas preventivas,correctivas o de seguridad
-                        para controlar los efectos adversos al equilibrio ecologico.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Eveniet quod voluptatum id enim, voluptatem facilis.
                     </p>
                 </div>
                 <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-file-powerpoint"></i>
                     </div>
-                    <h5 class="mt-4 mb-3">Informe Preventivo (IP)</h5>
+                    <h5 class="mt-4 mb-3">Lorem, ipsum dolor.</h5>
                     <p class="text-start p-2 ">
-                        Estudio que presenta las consecuencias ocacionadas por el imparto ambientasl que generraria
-                        o genera un obra o actividad, asi como la forma de evitarlo
-                        o atenuarlo.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Earum quibusdam nobis dolore ipsa atque
+                        assumenda.
                     </p>
                 </div>
                 <div class="col-md-6 feature" data-aos="fade-up">
                     <div class="icon">
                         <i class="fa-solid fa-file-contract"></i>
                     </div>
-                    <h5 class="mt-4 mb-3">Estudio Técnico Justificativo</h5>
+                    <h5 class="mt-4 mb-3">Lorem, ipsum dolor.</h5>
                     <p class="text-start p-2 ">
-                        Estudio que contiene información técnica de campo y gabinete para demostrar la
-                        viabilidad de llevar a cabo la remoción de la vegetación en un terreno forestal
-                        y por ende demostrar la excepción de la autorización, en los términos que establece
-                        el artículo 117 de la Ley General de Desarrollo Forestal Sustentable.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                         Ut minima corrupti atque incidunt,
+                        neque repudiandae.
                     </p>
                 </div>
-                <div class="col-md-6 feature" data-aos="fade-up">
-                    <div class="icon">
-                        <i class="fa-solid fa-bridge-water"></i>
-                    </div>
-                    <h5 class="mt-4 mb-3">Programa de Manejo de Residuos</h5>
-                    <p class="text-start p-2 ">
-                        Es un documento cuyo objetivo es minimizar la generación y
-                        maximizar la valoración de residuos sólidos urbanos, residuos
-                        de manejo especial y residuos peligrosos específicos bajo criterios
-                        de eficiencia ambiental, tecnológica, económica y social.
-                    </p>
-                </div>
-                <div class="col-md-6 feature" data-aos="fade-up">
-                    <div class="icon">
-                        <i class="fa-solid fa-building-circle-exclamation"></i>
-                    </div>
-                    <h5 class="mt-4 mb-3">Estudio de riesgo ambiental (ERA)</h5>
-                    <p class="text-start p-2 ">
-                        Estudio que contiene la aplicación sistemática de políticas,
-                        procedimientos de análisis, evaluación y control de riesgos,
-                        con el objetivo de proteger a la sociedad y al ambiente anticipando
-                        la posibilidad de liberaciones accidentales de sustancias consideradas como
-                        peligrosas por sus características corrosivas, reactivas, explosivas,
-                        tóxicas, inflamables o biológico-infecciosas (CRETIB) en las
-                        instalaciones y de obras o actividades.
-                    </p>
-                </div>
+
+
             </div>
         </div>
     </section>
@@ -217,7 +191,7 @@
         <div class="overlay"></div>
         <div class="container ">
             <div class="row gy-4 mt-5 mb-5" data-aos="fade-up">
-         
+
             </div>
         </div>
     </section>
@@ -226,26 +200,29 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 section-intro text-center" data-aos="fade-up">
-                    <h2>HISTORIAS BONITAS</h2>
+                    <h2 class="fuente-brand">HISTORIAS BONITAS</h2>
                 </div>
             </div>
-            <div class="row text-start">
+            <div class="row text-left">
                 <div class="col-md-4" data-aos="fade-up">
-                    <img class="img-trabajos-previos" src="img/eolico.png" alt="" />
-                    <div class="mt-4">
-                        <h5 class="m-4 fs-6 text-uppercase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam recusandae ratione, asperiores maiores repellat soluta.z</h5>
+                    <img class="img-trabajos-previos" src="img/cheems.jpg" alt="" />
+                    <div class="mt-2">
+                        <h5 class="mt-1 fs-6 text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Totam recusandae ratione, asperiores maiores repellat soluta.z</h5>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up">
-                    <img class="img-trabajos-previos" src="img/americas-min.png" alt="" />
-                    <div class="mt-4">
-                        <h5 class="mt-1 mb-2 text-uppercase fs-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum dolor quas nulla, doloremque rem iure.</h5>
+                    <img class="img-trabajos-previos" src="img/cheems.jpg" alt="" />
+                    <div class="mt-2">
+                        <h5 class="mt-1 mb-2  fs-6">Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Earum dolor quas nulla, doloremque rem iure.</h5>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up">
-                    <img class="img-trabajos-previos" src="img/progreso.png" alt="" />
-                    <div class="mt-4">
-                        <h5 class="m-2 fs-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum ex doloremque quis esse, repellat voluptates.</h5>
+                    <img class="img-trabajos-previos" src="img/cheems.jpg" alt="" />
+                    <div class="mt-2">
+                        <h5 class="m-2 fs-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum ex doloremque
+                            quis esse, repellat voluptates.</h5>
                     </div>
                 </div>
             </div>
@@ -297,7 +274,8 @@
                 </div>
                 <div class="col-md-6 text-md-end">
                     <div>
-                        <a href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+                        <a
+                            href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
                     </div>
                 </div>
             </div>
